chore(cli): add valibot config validation

--- a/apps/docs/content/docs/reference/cli.mdx
+++ b/apps/docs/content/docs/reference/cli.mdx
@@ -62,6 +62,8 @@ export default defineConfig({
 });
 ```
 
+The CLI validates this config at runtime using a small `valibot` schema, so typos or missing keys throw a helpful error before generation starts.
+
 ### Configuration Options
 
 #### `codegen.drizzle`
