--- a/apps/docs/content/docs/adapters/store-memory.mdx
+++ b/apps/docs/content/docs/adapters/store-memory.mdx
@@ -11,7 +11,7 @@ import { Callout } from 'fumadocs-ui/components/callout';
 An in-memory implementation of the `Store` contract from `@rippledb/client`. Useful for tests, examples, and quick prototypes.
 
 <Callout type="warning">
-This store does **not** persist anything. For production apps, you’ll want a persistent `store-*` implementation (e.g. SQLite/IndexedDB).
+This store does **not** persist anything. For production apps, you'll want a persistent `store-*` implementation like [`store-sqlite`](/docs/adapters/store-sqlite) (or IndexedDB in the future).
 </Callout>
 
 ## Installation
