--- a/apps/docs/content/docs/getting-started/index.mdx
+++ b/apps/docs/content/docs/getting-started/index.mdx
@@ -3,7 +3,6 @@ title: Installation
 description: Install RippleDB packages and set up your project
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Cards, Card } from 'fumadocs-ui/components/card';
 
 # Installation
@@ -14,67 +13,19 @@ RippleDB is distributed as a set of npm packages. Install what you need based on
 
 For a backend that stores changes and materializes state:
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/core @rippledb/server @rippledb/db-sqlite @rippledb/materialize-db
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/core @rippledb/server @rippledb/db-sqlite @rippledb/materialize-db
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/core @rippledb/server @rippledb/db-sqlite @rippledb/materialize-db
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages={['@rippledb/core', '@rippledb/server', '@rippledb/db-sqlite', '@rippledb/materialize-db']} />
 
 ### Using Drizzle ORM?
 
 If you're already using Drizzle, use the Drizzle-specific packages instead:
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/core @rippledb/server @rippledb/db-drizzle @rippledb/materialize-drizzle
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/core @rippledb/server @rippledb/db-drizzle @rippledb/materialize-drizzle
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/core @rippledb/server @rippledb/db-drizzle @rippledb/materialize-drizzle
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages={['@rippledb/core', '@rippledb/server', '@rippledb/db-drizzle', '@rippledb/materialize-drizzle']} />
 
 ## Client-Side Setup
 
 For a client that syncs with a RippleDB server:
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/core @rippledb/client @rippledb/remote-http
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/core @rippledb/client @rippledb/remote-http
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/core @rippledb/client @rippledb/remote-http
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages={['@rippledb/core', '@rippledb/client', '@rippledb/remote-http']} />
 
 ## Package Overview
 
