--- a/apps/docs/content/docs/adapters/controllers.mdx
+++ b/apps/docs/content/docs/adapters/controllers.mdx
@@ -3,7 +3,6 @@ title: controllers
 description: Abstract CRUD controllers with batch loading for RippleDB
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # @rippledb/client-controllers
@@ -16,23 +15,7 @@ For a higher-level API that combines these controllers with automatic cache inva
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/client-controllers
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/client-controllers
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/client-controllers
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages="@rippledb/client-controllers" />
 
 ## Basic Usage
 
