--- a/apps/docs/content/docs/adapters/db-memory.mdx
+++ b/apps/docs/content/docs/adapters/db-memory.mdx
@@ -3,7 +3,6 @@ title: db-memory
 description: In-memory adapter for testing
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # @rippledb/db-memory
@@ -16,23 +15,7 @@ A simple in-memory adapter for unit testing. No persistence, no dependencies.
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/db-memory
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/db-memory
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/db-memory
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages="@rippledb/db-memory" />
 
 ## Usage
 
