--- a/apps/docs/content/docs/adapters/db-sqlite.mdx
+++ b/apps/docs/content/docs/adapters/db-sqlite.mdx
@@ -3,7 +3,6 @@ title: db-sqlite
 description: SQLite database adapter using better-sqlite3
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # @rippledb/db-sqlite
@@ -12,23 +11,7 @@ A production-ready SQLite adapter for RippleDB using [better-sqlite3](https://gi
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/db-sqlite better-sqlite3
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/db-sqlite better-sqlite3
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/db-sqlite better-sqlite3
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages={['@rippledb/db-sqlite', 'better-sqlite3']} />
 
 ## Basic Usage
 
