--- a/apps/docs/content/docs/adapters/db-turso.mdx
+++ b/apps/docs/content/docs/adapters/db-turso.mdx
@@ -3,7 +3,6 @@ title: db-turso
 description: Edge-ready adapter for Turso and libSQL
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # @rippledb/db-turso
@@ -12,23 +11,7 @@ An adapter for [Turso](https://turso.tech/) and [libSQL](https://github.com/libs
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/db-turso @libsql/client
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/db-turso @libsql/client
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/db-turso @libsql/client
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages={['@rippledb/db-turso', '@libsql/client']} />
 
 ## Basic Usage
 
