--- a/apps/docs/content/docs/adapters/materialize-core.mdx
+++ b/apps/docs/content/docs/adapters/materialize-core.mdx
@@ -3,7 +3,6 @@ title: materialize-core
 description: Core materialization algorithm and adapter interfaces
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 
 # @rippledb/materialize-core
 
@@ -17,23 +16,7 @@ This package provides:
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/materialize-core
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/materialize-core
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/materialize-core
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages="@rippledb/materialize-core" />
 
 ## Core Types
 
