--- a/apps/docs/content/docs/adapters/materialize-db.mdx
+++ b/apps/docs/content/docs/adapters/materialize-db.mdx
@@ -3,7 +3,6 @@ title: materialize-db
 description: SQL-based state materializer for raw SQL projects
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # @rippledb/materialize-db
@@ -12,23 +11,7 @@ A SQL-based materializer that projects changes into domain tables. Works with `d
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/materialize-db
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/materialize-db
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/materialize-db
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages="@rippledb/materialize-db" />
 
 ## What Is Materialization?
 
