--- a/apps/docs/content/docs/adapters/materialize-drizzle.mdx
+++ b/apps/docs/content/docs/adapters/materialize-drizzle.mdx
@@ -3,7 +3,6 @@ title: materialize-drizzle
 description: Type-safe materializer using Drizzle ORM schemas
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # @rippledb/materialize-drizzle
@@ -12,23 +11,7 @@ A type-safe materializer that uses [Drizzle ORM](https://orm.drizzle.team/) tabl
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/materialize-drizzle drizzle-orm
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/materialize-drizzle drizzle-orm
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/materialize-drizzle drizzle-orm
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages={['@rippledb/materialize-drizzle', 'drizzle-orm']} />
 
 ## Why Use This?
 
