--- a/apps/docs/content/docs/adapters/store-memory.mdx
+++ b/apps/docs/content/docs/adapters/store-memory.mdx
@@ -3,7 +3,6 @@ title: store-memory
 description: In-memory Store implementation for tests and examples
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # @rippledb/store-memory
@@ -16,23 +15,7 @@ This store does **not** persist anything. For production apps, you'll want a per
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/store-memory
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/store-memory
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/store-memory
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages="@rippledb/store-memory" />
 
 ## Basic Usage
 
