--- a/apps/docs/content/docs/guides/client-sync.mdx
+++ b/apps/docs/content/docs/guides/client-sync.mdx
@@ -34,9 +34,7 @@ This guide shows how to set up client-side sync with a RippleDB server.
 <Step>
 ### Install Dependencies
 
-```bash
-npm install @rippledb/core @rippledb/client @rippledb/remote-http
-```
+<InstallCommandTabs packages={['@rippledb/core', '@rippledb/client', '@rippledb/remote-http']} />
 </Step>
 
 <Step>
