--- a/apps/docs/content/docs/reference/client.mdx
+++ b/apps/docs/content/docs/reference/client.mdx
@@ -11,9 +11,7 @@ Client-side sync orchestration including the Store interface, outbox, and replic
 
 ## Installation
 
-```bash
-pnpm add @rippledb/client
-```
+<InstallCommandTabs packages="@rippledb/client" />
 
 ## Store Interface
 
