--- a/apps/docs/content/docs/reference/core.mdx
+++ b/apps/docs/content/docs/reference/core.mdx
@@ -11,9 +11,7 @@ The foundation package containing HLC timestamps, Change types, and pure merge l
 
 ## Installation
 
-```bash
-pnpm add @rippledb/core
-```
+<InstallCommandTabs packages="@rippledb/core" />
 
 ## Hybrid Logical Clocks (HLC)
 
