--- a/apps/docs/content/docs/reference/remote-http.mdx
+++ b/apps/docs/content/docs/reference/remote-http.mdx
@@ -9,9 +9,7 @@ HTTP transport implementation of the `Remote` interface. Connects clients to Rip
 
 ## Installation
 
-```bash
-pnpm add @rippledb/remote-http
-```
+<InstallCommandTabs packages="@rippledb/remote-http" />
 
 ## Usage
 
