--- a/apps/docs/content/docs/reference/remote-trpc.mdx
+++ b/apps/docs/content/docs/reference/remote-trpc.mdx
@@ -3,7 +3,6 @@ title: "@rippledb/remote-trpc"
 description: tRPC Remote implementation for client-server sync
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # @rippledb/remote-trpc
@@ -12,23 +11,7 @@ A `Remote` implementation for RippleDB sync using tRPC procedures. This is an al
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/remote-trpc @trpc/client
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/remote-trpc @trpc/client
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/remote-trpc @trpc/client
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages={['@rippledb/remote-trpc', '@trpc/client']} />
 
 ## Usage
 
