--- a/apps/docs/content/docs/reference/server-trpc.mdx
+++ b/apps/docs/content/docs/reference/server-trpc.mdx
@@ -3,7 +3,6 @@ title: "@rippledb/server-trpc"
 description: tRPC router exposing RippleDB pull/append procedures
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 
 # @rippledb/server-trpc
 
@@ -11,23 +10,7 @@ A small helper to expose RippleDB sync over tRPC by generating a router with `pu
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/server-trpc @trpc/server
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/server-trpc @trpc/server
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/server-trpc @trpc/server
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages={['@rippledb/server-trpc', '@trpc/server']} />
 
 ## Usage
 
