--- a/apps/docs/content/docs/reference/server.mdx
+++ b/apps/docs/content/docs/reference/server.mdx
@@ -9,9 +9,7 @@ Defines the `Db` interface for server-side persistence. Implementations live in 
 
 ## Installation
 
-```bash
-pnpm add @rippledb/server
-```
+<InstallCommandTabs packages="@rippledb/server" />
 
 ## Db Interface
 
