--- a/apps/docs/content/docs/reference/zod.mdx
+++ b/apps/docs/content/docs/reference/zod.mdx
@@ -3,7 +3,6 @@ title: "@rippledb/zod"
 description: Zod schemas for runtime validation of RippleDB payloads
 ---
 
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # @rippledb/zod
@@ -19,23 +18,7 @@ This is useful for:
 
 ## Installation
 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tab value="pnpm">
-```bash
-pnpm add @rippledb/zod @rippledb/core zod
-```
-  </Tab>
-  <Tab value="npm">
-```bash
-npm install @rippledb/zod @rippledb/core zod
-```
-  </Tab>
-  <Tab value="yarn">
-```bash
-yarn add @rippledb/zod @rippledb/core zod
-```
-  </Tab>
-</Tabs>
+<InstallCommandTabs packages={['@rippledb/zod', '@rippledb/core', 'zod']} />
 
 ## withZod() - Auto-Generated Schemas
 
