--- a/apps/docs/content/docs/guides/server-setup.mdx
+++ b/apps/docs/content/docs/guides/server-setup.mdx
@@ -4,7 +4,6 @@ description: Build a production-ready RippleDB server
 ---
 
 import { Steps, Step } from 'fumadocs-ui/components/steps';
-import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # Server Setup
@@ -22,26 +21,28 @@ This guide walks through setting up a RippleDB server with HTTP endpoints for sy
 <Step>
 ### Install Dependencies
 
-<Tabs items={['SQLite', 'Turso', 'Drizzle']}>
-  <Tab value="SQLite">
-```bash
-npm install @rippledb/core @rippledb/db-sqlite @rippledb/materialize-db better-sqlite3 express
-npm install -D typescript @types/better-sqlite3 @types/express tsx
-```
-  </Tab>
-  <Tab value="Turso">
-```bash
-npm install @rippledb/core @rippledb/db-turso @rippledb/materialize-db @libsql/client express
-npm install -D typescript @types/express tsx
-```
-  </Tab>
-  <Tab value="Drizzle">
-```bash
-npm install @rippledb/core @rippledb/db-drizzle @rippledb/materialize-drizzle drizzle-orm better-sqlite3 express
-npm install -D typescript @types/better-sqlite3 @types/express tsx
-```
-  </Tab>
-</Tabs>
+<NestedInstallCommandTabs
+  options={[
+    {
+      value: 'sqlite',
+      label: 'SQLite',
+      packages: ['@rippledb/core', '@rippledb/db-sqlite', '@rippledb/materialize-db', 'better-sqlite3', 'express'],
+      devPackages: ['typescript', '@types/better-sqlite3', '@types/express', 'tsx'],
+    },
+    {
+      value: 'turso',
+      label: 'Turso',
+      packages: ['@rippledb/core', '@rippledb/db-turso', '@rippledb/materialize-db', '@libsql/client', 'express'],
+      devPackages: ['typescript', '@types/express', 'tsx'],
+    },
+    {
+      value: 'drizzle',
+      label: 'Drizzle',
+      packages: ['@rippledb/core', '@rippledb/db-drizzle', '@rippledb/materialize-drizzle', 'drizzle-orm', 'better-sqlite3', 'express'],
+      devPackages: ['typescript', '@types/better-sqlite3', '@types/express', 'tsx'],
+    },
+  ]}
+/>
 </Step>
 
 <Step>
