--- a/apps/docs/content/docs/reference/cli.mdx
+++ b/apps/docs/content/docs/reference/cli.mdx
@@ -11,7 +11,7 @@ CLI tools for RippleDB, including schema codegen from external sources like Driz
 
 ## Installation
 
-<InstallCommandTabs packages="@rippledb/cli" dev />
+<InstallCommandTabs devPackages="@rippledb/cli" />
 
 ## Commands
 
